--- a/requirements.txt
+++ b/requirements.txt
@@ -13,15 +13,15 @@ pyodbc
 pycups
 git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc-appointment
 git+https://github.com/botswana-harvard/edc-audit@develop#egg=edc-audit
-git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
-git+https://github.com/botswana-harvard/edc-configuration@develop#egg=edc-configuration
-git+https://github.com/botswana-harvard/edc-consent@develop#egg=edc-consent
-git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc-constants
-git+https://github.com/botswana-harvard/edc-content-type-map@develop#egg=edc-content_type_map
+git+https://github.com/botswana-harvard/edc-base@master#egg=edc-base
+git+https://github.com/botswana-harvard/edc-configuration@master#egg=edc-configuration
+git+https://github.com/botswana-harvard/edc-consent@master#egg=edc-consent
+git+https://github.com/botswana-harvard/edc-constants@master#egg=edc-constants
+git+https://github.com/botswana-harvard/edc-content-type-map@master#egg=edc-content_type_map
 git+https://github.com/botswana-harvard/edc-crypto-fields@develop#egg=edc-crypto-fields
-git+https://github.com/botswana-harvard/edc-data-manager@develop#egg=edc-data-manager
-git+https://github.com/botswana-harvard/edc-device@develop#egg=edc-device
-git+https://github.com/botswana-harvard/edc-identifier@develop#egg=edc-identifier
+git+https://github.com/botswana-harvard/edc-data-manager@master#egg=edc-data-manager
+git+https://github.com/botswana-harvard/edc-device@master#egg=edc-device
+git+https://github.com/botswana-harvard/edc-identifier@master#egg=edc-identifier
 git+https://github.com/botswana-harvard/edc-lab@develop#egg=edc-lab
 git+https://github.com/botswana-harvard/edc-locator@develop#egg=edc-locator
 git+https://github.com/botswana-harvard/edc-meta-data@develop#egg=edc-meta-data
