--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ git+https://github.com/clinicedc/edc-metadata@develop#egg=edc-metadata
 git+https://github.com/clinicedc/edc-visit-tracking@develop#egg=edc-visit-tracking
 git+https://github.com/clinicedc/edc-visit-schedule@develop#egg=edc-visit-schedule
 git+https://github.com/clinicedc/edc-timepoint@develop#egg=edc-timepoint
+git+https://github.com/clinicedc/edc-pdutils@develop#egg=edc-pdutils
