--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ git+https://github.com/clinicedc/edc-consent@develop#egg=edc-consent
 git+https://github.com/clinicedc/edc-constants@develop#egg=edc-constants
 git+https://github.com/clinicedc/edc-dashboard@develop#egg=edc-dashboard
 git+https://github.com/clinicedc/edc-device@develop#egg=edc-device
+git+https://github.com/clinicedc/edc-facility@develop#egg=edc-facility
 git+https://github.com/clinicedc/edc-form-validators@develop#egg=edc-form-validators
 git+https://github.com/clinicedc/edc-identifier@develop#egg=edc-identifier
 git+https://github.com/clinicedc/edc-metadata@develop#egg=edc-metadata
@@ -19,9 +20,10 @@ git+https://github.com/clinicedc/edc-protocol@develop#egg=edc-protocol
 git+https://github.com/clinicedc/edc-reference@develop#egg=edc-reference
 git+https://github.com/clinicedc/edc-registration@develop#egg=edc-registration
 git+https://github.com/clinicedc/edc-subject-dashboard@develop#egg=edc-subject-dashboard
-git+https://github.com/clinicedc/edc-sync@develop#egg=edc-sync
 git+https://github.com/clinicedc/edc-timepoint@develop#egg=edc-timepoint
 git+https://github.com/clinicedc/edc-visit-schedule@develop#egg=edc-visit-schedule
 git+https://github.com/clinicedc/edc-visit-tracking@develop#egg=edc-visit-tracking
 git+https://github.com/erikvw/django-crypto-fields@develop#egg=django-crypto_fields
+git+https://github.com/erikvw/django-offline-file@develop#egg=django-offline-files
+git+https://github.com/erikvw/django-offline@develop#egg=django-offline
 git+https://github.com/erikvw/django-revision@develop#egg=django-revision
