--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ git+https://github.com/clinicedc/edc-device@develop#egg=edc-device
 git+https://github.com/clinicedc/edc-facility@develop#egg=edc-facility
 git+https://github.com/clinicedc/edc-form-validators@develop#egg=edc-form-validators
 git+https://github.com/clinicedc/edc-identifier@develop#egg=edc-identifier
+git+https://github.com/clinicedc/edc-lab@develop#egg=edc-lab
+git+https://github.com/clinicedc/edc-label@develop#egg=edc-label
 git+https://github.com/clinicedc/edc-metadata@develop#egg=edc-metadata
 git+https://github.com/clinicedc/edc-model-admin@develop#egg=edc-model-admin
 git+https://github.com/clinicedc/edc-model-fields@develop#egg=edc-model-fields
