--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,12 @@ install:
 - pip install --upgrade pip
 - pip install flake8
 - pip install coveralls
+- pip install -e .
 - pip install -q -r requirements.txt
 before_script:
-- flake8 edc_model_fields
+- flake8 edc_export
 - mysql -e 'create database edc character set utf8;'
 script:
-- coverage run --source=edc_model_fields manage.py test
+- coverage run --source=edc_export manage.py test
 after_success:
 - coveralls
