--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-media/*
-db.sqlite3*
-edc_export/migrations/*
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+
 .pydevproject
 .project
-.settings
+.settings/
+db.sqlite3
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
