--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+crypto_fields/
+etc/*
+venv/*
+
 # Swap
 [._]*.s[a-v][a-z]
 [._]*.sw[a-p]
@@ -13,17 +17,16 @@ Session.vim
 # Auto-generated tag files
 tags
 
-.pydevproject
+.settings
 .project
-.settings/
+.pydevproject
+test-*
 db.sqlite3
-.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
-
+_build/
 # C extensions
 *.so
 
@@ -41,7 +44,6 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -64,8 +66,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
-.hypothesis/
+*,cover
 
 # Translations
 *.mo
@@ -73,50 +74,9 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
 
 # PyBuilder
 target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# dotenv
-.env
-
-# virtualenv
-.venv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
