--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ passenv = CI TRAVIS TRAVIS_*
 setenv =
     PYTHONWARNINGS=module::DeprecationWarning
 commands =
-  flake8 django_crypto_fields
+  flake8 edc_export
   coverage run --source=edc_export setup.py test
   coverage report
 deps =
