--- a/.coveragerc
+++ b/.coveragerc
@@ -3,4 +3,11 @@ omit =
     */wsgi.py
     setup.py
     manage.py
+    */config_utils/*
+    */navbars.py
     */migrations/*
+    */mommy_*
+    venv/*
+    runtests.py
+    .tox/*
+    .eggs/*
