--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,8 @@
 [tox]
 envlist =
-    py36-django21
-    py36-djangotrunk
-    py37-django21
+    py37-django21,
+    py37-django22,
     py37-djangotrunk
-    flake8
-
-
-[flake8]
-ignore = E41,F401,W503,F601,W605,E203
-max-complexity = 10
-max-line-length = 95
-exclude = edc_export/migrations/*,.venv/*
-
 
 [testenv:docs]
 changedir = docs
@@ -20,22 +10,21 @@ deps =
     Sphinx
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
-
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
-setenv =
-    PYTHONWARNINGS=module::DeprecationWarning
-commands =
-  flake8 edc_export
-  coverage run --source=edc_export setup.py test
-  coverage report
+setenv = PYTHONWARNINGS=module::DeprecationWarning
 deps =
+  -rrequirements.txt
   coverage
   flake8
   django21: Django>=2.1,<2.2
+  django22: https://github.com/django/django/tarball/2.2a1
   djangotrunk: https://github.com/django/django/tarball/master
+commands =
+  flake8 edc_export
+  coverage run setup.py test
+  coverage report
 
 [travis]
 python =
-  3.6: py36
   3.7: py37
