--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,17 @@ setenv =
     PYTHONWARNINGS=module::DeprecationWarning
 commands =
   flake8 edc_export
-  coverage run setup.py test {posargs}
+  coverage run runtests.py {posargs}
   codecov -e TOXENV
 deps =
   -rrequirements.txt
+  edc-base
+  edc_model_admin
+  edc-constants
+  edc-pdutils
+  edc-permissions
+  django-crypto-fields
+  django-revision
   edc-test-utils
   coverage
   codecov>=1.4.0
