--- a/tox.ini
+++ b/tox.ini
@@ -14,19 +14,21 @@ passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 setenv =
     PYTHONWARNINGS=module::DeprecationWarning
 commands =
-  flake8 edc_export
-  coverage run runtests.py {posargs}
-  codecov -e TOXENV
+    flake8 edc_export
+    pip install -U git+https://github.com/erikvw/django-simple-history@admin_revert_permissions
+    coverage run setup.py test {posargs}
+    codecov -e TOXENV
 deps =
-  -rrequirements.txt
-  -rrequirements.tests.txt
-  coverage
-  codecov>=1.4.0
-  flake8
-  django22: Django>=2.2,<2.3
-  djangotrunk: https://github.com/django/django/tarball/master
+    -rrequirements.txt
+    -rrequirements.tests.txt
+    edc-test-utils
+    coverage
+    codecov>=1.4.0
+    flake8
+    django22: Django>=2.2,<2.3
+    djangotrunk: https://github.com/django/django/tarball/master
 
 [travis]
 python =
-  3.7: py37-django22
-  3.7: py37-djangotrunk
+    3.7: py37-django22
+    3.7: py37-djangotrunk
