--- a/requirements.tests.txt
+++ b/requirements.tests.txt
@@ -6,6 +6,7 @@ django-collect-offline-files
 django-crypto-fields
 django-revision
 django_extensions
+django-multisite
 mysqlclient
 edc-action-item
 edc-adverse-event
