--- a/requirements.tests.txt
+++ b/requirements.tests.txt
@@ -6,7 +6,6 @@ django-collect-offline-files
 django-crypto-fields
 django-revision
 django_extensions
-django-multisite
 mysqlclient
 edc-action-item
 edc-adverse-event
@@ -60,3 +59,5 @@ edc-utils
 edc-visit-schedule
 edc-visit-tracking
 git+https://github.com/erikvw/django-simple-history@admin_revert_permissions2
+git+https://github.com/erikvw/django-multisite@master
+
