--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include MANIFEST.in
 include *.rst
 recursive-include edc_export/templates *
 recursive-include edc_export/static *
+include */locale/*/LC_MESSAGES/*.mo
